<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLibroActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_book_name" />

        <EditText
            android:id="@+id/editTextBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_book_name_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_book_description" />

        <EditText
            android:id="@+id/editTextTextMultiLineBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/edit_text_book_description_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/buttonSaveBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>